# search_modernColBERT

./: .gitattributes  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
data/processed/: products_dataset.db
notebooks/: evaluation.ipynb  indexing_data.ipynb  prepare_data.ipynb  retrieve_data.ipynb
scripts/: evaluate.py  index_data.py  prepare_data.py  retrieve_data.py  utils.py
src/: api.py  search.py
src/scripts/: evaluation.py  index_data.py  prepare_data.py  utils.py
tests/: test_index_data.py  test_retrieve_data.py
