[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "search-moderncolbert"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas==3.0.1",
    "numpy==2.4.3",
    "pyarrow",
    "sqlalchemy",
    "torch",
    "pylate[voyager]",
    "fastapi",
    "uvicorn"
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[project.optional-dependencies]
notebook = [
    "jupyterlab==4.5.6",
    "notebook==7.5.5",
    "ipywidgets",
]
dev = [
    "pytest",
]